muncher/programs/test-cases/error-2.mnc.stderr
error: expected `maybe` or `not`
   --> test.mnc:12:11
   |
12 | a.call me what?;
   |  -        ^^^^ expected `maybe` or `not`
   |  |         
   |  call to <Object A> started here

